data/test/regression/type_check/fail/issue_226.v
// A module named foo hasn't been declared
foo f();
